src/tools/SourceText.g
grammar SourceText;
options
{
language=Python;
output=AST;
}


source_mapping[m]
    : (element[m])*
    ;


element[d]
    :   item { n = d[$item.value] = dict() }  '{' (element[n])* '}'
    |   i0=item i1=item { d[i0.value] = unicode(i1.value) }
    ;


item returns [value]
    :   STRING { $value = $STRING.text[1:-1] }
    ;


fragment CHAR: ~( '"'| '\\' );
fragment LETTER
    :  '\u0024' |
       '\u0041'..'\u005a' |
       '\u005f' |
       '\u0061'..'\u007a' |
       '\u00c0'..'\u00d6' |
       '\u00d8'..'\u00f6' |
       '\u00f8'..'\u00ff' |
       '\u0100'..'\u1fff' |
       '\u3040'..'\u318f' |
       '\u3300'..'\u337f' |
       '\u3400'..'\u3d2d' |
       '\u4e00'..'\u9fff' |
       '\uf900'..'\ufaff' |
       '\u0030'..'\u0039' |
       '\u0660'..'\u0669' |
       '\u06f0'..'\u06f9' |
       '\u0966'..'\u096f' |
       '\u09e6'..'\u09ef' |
       '\u0a66'..'\u0a6f' |
       '\u0ae6'..'\u0aef' |
       '\u0b66'..'\u0b6f' |
       '\u0be7'..'\u0bef' |
       '\u0c66'..'\u0c6f' |
       '\u0ce6'..'\u0cef' |
       '\u0d66'..'\u0d6f' |
       '\u0e50'..'\u0e59' |
       '\u0ed0'..'\u0ed9' |
       '\u1040'..'\u1049'
    ;


fragment EscapeSequence
    :   '\\' ('b'|'t'|'n'|'f'|'r'|'\"'|'\''|'\\')
    |   UnicodeEscape
    ;

fragment UnicodeEscape
    :   '\\' 'u' HexDigit HexDigit HexDigit HexDigit
    ;

fragment HexDigit
    : ('0'..'9'|'a'..'f'|'A'..'F')
    ;



WS: (' ' | '\r' | '\t' | '\u000C' | '\n') { $channel=HIDDEN; };
STRING
    : '"' (EscapeSequence | ~('\\'|'"') )* '"'
    ;



COMMENT
    : '/*' (options {greedy=false;} : .)* '*/' {$channel=HIDDEN;}
    ;

LINECOMMENT
    : '//' ~(LT)* {$channel=HIDDEN;}
    | '[$' CHAR* {$channel=HIDDEN;}
    ;

LT
    : '\n'  // Line feed.
    | '\r'  // Carriage return.
    | '\u2028'// Line separator.
    | '\u2029'// Paragraph separator.
    ;
